Added ApiProperties for GeographicTaxonomyListDto and modified a function name.
