# app/src/main/resources/swagger/api-docs.json
@@ -112,14 +112,14 @@
         ]
       }
     },
-    "/institutions/updateGeographicTaxonomy/{institutionId}": {
-      "put": {
+    "/institutions/{institutionId}": {
+      "get": {
         "tags": [
           "institutions"
         ],
-        "summary": "updateInstitutionGeographicTaxonomy",
-        "description": "Service to update the geographic taxonomy of an onboarded institution",
-        "operationId": "updateInstitutionGeographicTaxonomyUsingPUT",
+        "summary": "getInstitution",
+        "description": "Service to get a specific institution related to logged user",
+        "operationId": "getInstitutionUsingGET",
         "parameters": [
           {
             "name": "institutionId",
@@ -132,18 +132,16 @@
             }
           }
         ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GeographicTaxonomyDtoList"
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InstitutionResource"
+                }
+              }
+            }
           },
           "400": {
             "description": "Bad Request",
@@ -157,6 +155,16 @@
           },
           "401": {
             "description": "Unauthorized",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/problem+json": {
                 "schema": {
@@ -185,57 +193,51 @@
         ]
       }
     },
-    "/institutions/{institutionId}": {
-      "get": {
+    "/institutions/{institutionId}/geographicTaxonomy": {
+      "put": {
         "tags": [
           "institutions"
         ],
-        "summary": "getInstitution",
-        "description": "Service to get a specific institution related to logged user",
-        "operationId" : "getInstitutionUsingGET",
-        "parameters" : [ {
-          "name" : "institutionId",
-          "in" : "path",
-          "description" : "Institution's unique internal identifier",
-          "required" : true,
-          "style" : "simple",
-          "schema" : {
-            "type" : "string"
+        "summary": "updateInstitutionGeographicTaxonomy",
+        "description": "Service to update the geographic taxonomy of an onboarded institution",
+        "operationId": "updateInstitutionGeographicTaxonomyUsingPUT",
+        "parameters": [
+          {
+            "name": "institutionId",
+            "in": "path",
+            "description": "Institution's unique internal identifier",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
           }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/InstitutionResource"
-                }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GeographicTaxonomyListDto"
               }
             }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
           },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "application/problem+json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/Problem"
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
                 }
               }
             }
           },
           "401" : {
             "description" : "Unauthorized",
-            "content" : {
-              "application/problem+json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/Problem"
-                }
-              }
-            }
-          },
-          "404" : {
-            "description" : "Not Found",
             "content" : {
               "application/problem+json" : {
                 "schema" : {
@@ -2598,14 +2600,14 @@
         "required" : [ "address", "email", "pec" ],
         "type" : "object",
         "properties" : {
-          "address" : {
-            "type" : "string",
-            "description" : "DPO's address"
+          "address": {
+            "type": "string",
+            "description": "DPO's address"
           },
-          "email" : {
-            "type" : "string",
-            "description" : "DPO's email",
-            "format" : "email",
+          "email": {
+            "type": "string",
+            "description": "DPO's email",
+            "format": "email",
             "example": "email@example.com"
           },
           "pec": {
@@ -2634,12 +2636,16 @@
           }
         }
       },
-      "GeographicTaxonomyDtoList": {
-        "title": "GeographicTaxonomyDtoList",
+      "GeographicTaxonomyListDto": {
+        "title": "GeographicTaxonomyListDto",
+        "required": [
+          "geographicTaxonomyDtoList"
+        ],
         "type": "object",
         "properties": {
           "geographicTaxonomyDtoList": {
             "type": "array",
+            "description": "List of institution's geographic taxonomies",
             "items": {
               "$ref": "#/components/schemas/GeographicTaxonomyDto"
             }
@@ -2659,14 +2665,16 @@
             "description": "Institution's geographic taxonomy ISTAT code"
           },
           "desc": {
-            "type" : "string",
-            "description" : "Institution's geographic taxonomy extended name"
+            "type": "string",
+            "description": "Institution's geographic taxonomy extended name"
           }
         }
       },
-      "IdentityTokenResource" : {
-        "title" : "IdentityTokenResource",
-        "required" : [ "token" ],
+      "IdentityTokenResource": {
+        "title": "IdentityTokenResource",
+        "required": [
+          "token"
+        ],
         "type" : "object",
         "properties" : {
           "token" : {
@@ -2744,12 +2752,12 @@
             "description": "Billing recipient code"
           },
           "vatNumber": {
-            "type" : "string",
-            "description" : "Institution's VAT number"
+            "type": "string",
+            "description": "Institution's VAT number"
           },
-          "zipCode" : {
-            "type" : "string",
-            "description" : "Institution's zipCode"
+          "zipCode": {
+            "type": "string",
+            "description": "Institution's zipCode"
           }
         }
       },
